cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_229.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_enc.c:160: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_enc.c:160:13: Write of unused value
158.           if (l != -8) {
159.               n2l(in, tin0);
160.               n2l(in, tin1);
                   ^
161.               tin[0] = tin0;
162.               tin[1] = tin1;
